1998-07-18  Chris Lahey  <clahey@umich.edu>

	* encrypt.c: Rewrote this based on reverse.c instead of diff.c.

1998-07-18  Chris Lahey  <clahey@umich.edu>

	* plugin_howto: New file documenting the plugin API in client.h.

1998-07-16  Alex Roberts  <bse@dial.pipex.com>
	
	* Added encrypt/decrypt plugins to main plugin repo...