@@ -1,3 +1,12 @@
+1998-07-18  Chris Lahey  <clahey@jennifer.reshall.umich.edu>
+
+	* reverse.c: Changed the comment at the top of the code.
+	
+	* encrypt.c (main): Fixed a bug in the encryption code.
+
+	* encrypt.c (main): Forgot to change the menu location from
+	Reverse.
+
 1998-07-18  Chris Lahey  <clahey@umich.edu>
 
 	* encrypt.c: Rewrote this based on reverse.c instead of diff.c.
